# witchbox2

./: Cargo.toml  TODO.md  default_chat.txt  testdata.txt
animations/: bender.txt  prime.txt  prime2.txt  test.txt
misc/: canvas.aseprite  displaystate.aseprite  layout.aseprite
src/: input.rs  line.rs  main.rs  testdata.rs  todo.rs  twitch.rs
src/audio/: mod.rs  sound_player.rs
src/bintobe/: testdata.rs
src/display/: animation.rs  channel.rs  chat.rs  chat_display.rs  event_display.rs  events_to_widgets.rs  fullscreen_display.rs  input.rs  mod.rs  models.rs  views.rs
src/events/: filter.rs  triggers.rs
src/oldevents/: mod.rs
src/oldisplay/: animation.rs  channel.rs  chat.rs  colors.rs  event_display.rs  mod.rs  window.rs
src/transformers/: channel_events.rs  chat.rs  chatfilter.rs  filters.rs  follow.rs  mod.rs  sub.rs
