[package]
name = "witchbox2"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
chrono = "0.4.19"
euclid = "0.22.6"
neotwitch = { path = "../neotwitch" }
rand = "0.8.4"
serde_json = "1.0.68"
tinybit = { path = "../tinybit" }
tinyroute = { path = "../tinyroute" }
tokio = { version = "1.12.0", features = ["full"] }
unicode-width = "0.1.9"
