[package]
name = "witchbox2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
chrono = "0.4.19"
neotwitch = { path = "../neotwitch" }
rand = "0.8.4"
rodio = "0.14.0"
serde_json = "1.0.68"
tinyroute = { path = "../tinyroute" }
tinylog = { path = "../tinylog" }
tokio = { version = "1.12.0", features = ["full"] }
log = "0.4.14"
anathema = { path = "../anathema" }
unicode-width = "0.1.9"

[features]
